syntax = "proto3";
package monitor.proto;

// 监控系统的 CPU 平均负载
message CpuLoad {
    float load_avg_1 = 1;
    float load_avg_3 = 2;
    float load_avg_15 = 3;
  }